syntax = "proto3";

package grpc;
option java_package = "com.rlgino.protobufexample.protobuf";
option java_outer_classname = "Wishlist";
option go_package = "internal/net/grpc";

message Item {
  enum ItemPriority {
    LOW = 0;
    MID = 50;
    HIGH = 100;
  }

  enum ItemStatus {
    INACTIVE = 0;
    ACTIVE = 1;
  }

  string id = 1;
  string wishListId = 2;
  string name = 3;
  string link = 4;
  double price = 5;
  ItemPriority priority = 6;
  ItemStatus status = 7;
}

message WishList {
  enum WishListStatus {
    INACTIVE = 0;
    ACTIVE = 1;
  }

  string id = 1;
  string name = 2;
  WishListStatus status = 3;
}

// file: proto/wishlist.proto

message CreateWishListReq {
  WishList wishList = 1;
}

message CreateWishListResp {
  string wishListId = 1;
}

message AddItemReq {
  Item item = 1;
}

message AddItemResp {
  string itemId = 1;
}

message ListWishListReq {
  string wishListId = 1;
}

message ListWishListResp {
  repeated Item items = 1;
}

service WishListService {
  rpc Create(CreateWishListReq) returns (CreateWishListResp);
  rpc Add(AddItemReq) returns (AddItemResp);
  rpc List(ListWishListReq) returns (ListWishListResp);
}